<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorTransparent"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/actionbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/action_more"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/background_icon_action_white"
                android:src="@drawable/ic_action_more_black" />

            <ImageButton
                android:id="@+id/action_record"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/action_more"
                android:background="@drawable/background_icon_action_white"
                android:src="@drawable/ic_action_record_black" />

            <ImageButton
                android:id="@+id/action_search"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/action_record"
                android:background="@drawable/background_icon_action_white"
                android:src="@drawable/ic_action_search_black" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:text="Từ Điển"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@color/colorBlack"
                android:textSize="25sp" />

            <RelativeLayout
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_toLeftOf="@id/action_search"
                android:layout_toRightOf="@id/title"
                android:background="@drawable/background_edt_search"
                android:visibility="gone">

                <ImageButton
                    android:id="@+id/action_cancel"
                    android:layout_width="30dp"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="7dp"
                    android:background="@drawable/background_icon_action"
                    android:src="@drawable/ic_action_cancle" />

                <ImageView
                    android:id="@+id/img_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_action_search_gray" />

                <EditText
                    android:id="@+id/edt_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:layout_toLeftOf="@id/action_cancel"
                    android:layout_toRightOf="@id/img_search"
                    android:background="@color/colorTransparent"
                    android:hint="Nhập từ cần tìm"
                    android:inputType="textAutoComplete" />
            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/layout_funtion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorGreen"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:id="@+id/funtion_favorite"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:src="@drawable/favorite_white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/my_word"
                        android:textColor="@color/colorWhite"
                        android:textSize="13sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorPurple"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:id="@+id/funtion_toeic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_toeic" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/toeic_word"
                        android:textColor="@color/colorWhite"
                        android:textSize="13sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorAccent"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:id="@+id/funtion_iv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:src="@drawable/iv" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/irregular_verbs"
                        android:textColor="@color/colorWhite"
                        android:textSize="13sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorYellow"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:id="@+id/funtion_idioms"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:src="@drawable/idioms" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/idioms_English"
                        android:textColor="@color/colorWhite"
                        android:textSize="13sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </HorizontalScrollView>

    <android.support.v7.widget.CardView
        android:id="@+id/btn_window"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorWhite"
        android:layout_marginHorizontal="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@drawable/background_btn_white_corner">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@mipmap/ic_logo_tudien_round" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="Bong bóng tra từ"
                android:gravity="center_vertical"
                android:textColor="@color/colorBlack"
                android:textSize="17sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <TextView
        android:id="@+id/txt_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/last_search"
        android:textColor="@color/colorBlack"
        android:textSize="17sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_view_suggest"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarSize="5dp"
        android:scrollbars="vertical"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_view_history"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:background="@color/colorWhite"
        android:elevation="5dp"
        android:scrollbarSize="2dp"
        android:scrollbars="vertical"></android.support.v7.widget.RecyclerView>

</LinearLayout>